Designed a Filler API